# demo_hello

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.adoc  README.md  dune-project
.config/: toolchains.bazelrc
lib/goodbye/: dune
lib/hello/: BUILD.bazel  dune
src/: BUILD.bazel
src/goodbye/: BUILD.bazel
src/hello/: BUILD.bazel
test/: dune
tools/: release_build  release_test
